# toilet_robot_simulation

./: README.md
panda/: CMakeLists.txt  package.xml
panda/include/: toilet_scene.h
panda/launch/: gz.launch.py  gz_swipe.launch.py  mtc_spray_clean.launch.py  pickup_wConfig.py  toilet_surface_clean.launch.py
panda/src/: mtc_spray_clean.cpp  simple_swipe.cpp  teleop_node.cpp  toilet_scene.cpp  toilet_surface_clean.cpp
panda_description/: CMakeLists.txt
panda_description/config/: diffdrive_controller.yaml  initial_joint_positions.yaml
panda_description/launch/: view_gz.launch.py
panda_description/panda/: model.config  model.sdf
panda_description/urdf/: brush.urdf  mir.urdf.xacro  panda.gazebo  panda.ros2_control  panda.urdf  panda.urdf.xacro  panda_arm.xacro  panda_gripper.xacro  panda_inertial.xacro  panda_utils.xacro
panda_description/urdf/include/: mir.gazebo.xacro  transmissions.xacro
panda_moveit_config/: CMakeLists.txt  README.md  package.xml
panda_moveit_config/config/: controllers_diff.yaml  controllers_effort.yaml
panda_moveit_config/launch/: ex_fake_control.launch.py  ex_gz_control.launch.py  move_group.launch.py
panda_moveit_config/src/: waypoint_follower.cpp
panda_moveit_config/srdf/: panda.srdf  panda.srdf.xacro
